[package]
name = "soli"
version = "0.1.0"
authors = ["Mark Toda <mtoda@bitgo.com>"]
edition = "2018"

[dependencies]
tempfile = "3.1.0"
enum-utils = "0.1.2"
reqwest = { version = "0.11.3", features = ["json"] }
serde_json = "1.0.55"
serde = { version = "1.0.114", features = ["derive"] }
structopt = { version = "0.3" }
anyhow = "1.0.32"
tokio = { version = "1.6.0", features = ["macros", "io-util", "rt-multi-thread"] }
shellexpand = "2.1.0"
octocrab = "0.9.0"
